chore: initial project setup