@@ -10,6 +10,8 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.concurrent.TimeUnit;
 
 /**
@@ -20,14 +22,23 @@ public class CachePersistDbJson<K,V> extends AbstractCachePersist<K,V> {
 
     private static final CacheSerializer SERIALIZER = new JacksonSerializer();
 
-    /**
-     * 数据库路径
-     * @since 0.0.8
-     */
     private final String dbPath;
 
+    private final long delay;
+
+    private final long period;
+
+    private final TimeUnit timeUnit;
+
     public CachePersistDbJson(String dbPath) {
+        this(dbPath, 5, 5, TimeUnit.MINUTES);
+    }
+
+    public CachePersistDbJson(String dbPath, long delay, long period, TimeUnit timeUnit) {
         this.dbPath = dbPath;
+        this.delay = delay;
+        this.period = period;
+        this.timeUnit = timeUnit;
     }
 
     /**
@@ -40,13 +51,7 @@ public class CachePersistDbJson<K,V> extends AbstractCachePersist<K,V> {
         var entrySet = this.map.keySet();
         final CacheExpire<K,V> expire = this.expire;
 
-        // 创建并清空文件
-        try {
-            Files.write(Path.of(dbPath), new byte[0], StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.CREATE);
-        } catch (IOException e) {
-            throw new RuntimeException(e);
-        }
-
+        List<String> lines = new ArrayList<>(entrySet.size());
         for(K key : entrySet) {
             Long expireTime = expire.expireTime(key);
             PersistRdbEntry<K,V> persistRdbEntry = new PersistRdbEntry<>();
@@ -54,28 +59,29 @@ public class CachePersistDbJson<K,V> extends AbstractCachePersist<K,V> {
             persistRdbEntry.setValue(this.map.get(key));
             persistRdbEntry.setExpire(expireTime);
 
-            String line = SERIALIZER.serialize(persistRdbEntry);
-            try {
-                Files.writeString(Path.of(dbPath), line, StandardOpenOption.APPEND);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
+            lines.add(SERIALIZER.serialize(persistRdbEntry));
+        }
+
+        try {
+            Files.write(Path.of(dbPath), lines, StandardOpenOption.CREATE, StandardOpenOption.TRUNCATE_EXISTING);
+        } catch (IOException e) {
+            throw new RuntimeException(e);
         }
     }
 
     @Override
     public long delay() {
-        return 5;
+        return delay;
     }
 
     @Override
     public long period() {
-        return 5;
+        return period;
     }
 
     @Override
     public TimeUnit timeUnit() {
-        return TimeUnit.MINUTES;
+        return timeUnit;
     }
 
 }
